# glassscan

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
data/: geometry_single_building_edges.html  geometry_single_building_map.html  geometry_single_building_panos.html
notebooks/: geometry_single_building.ipynb  run.ipynb
src/glassscan/: pipeline.py  scoring_prompt.md  test_pipeline.py  test_pipeline_cv.py  types.py
src/glassscan/fetch/: CLAUDE.md  __init__.py  fetch.py  photometa.py  test_fetch.py
src/glassscan/predict/: CLAUDE.md  __init__.py  predict.py  test_predict.py
src/glassscan/rectify/: CLAUDE.md  __init__.py  rectify.py  test_rectify.py
src/glassscan/segment/: CLAUDE.md  __init__.py  segment.py  test_segment.py
src/glassscan/visualise/: CLAUDE.md  __init__.py  export.py  test_export.py
src/glassscan/visualise/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
src/glassscan/visualise/dashboard/public/: buildings.json
src/glassscan/visualise/dashboard/src/: App.tsx  index.css  types.ts
src/glassscan/visualise/dashboard/src/components/: BuildingPanel.tsx  BuildingPopup.tsx  DistributionChart.tsx  DrawTool.tsx  Filters.tsx  Header.tsx  Legend.tsx  Map.tsx  MapView.tsx  SelectionStats.tsx  Sidebar.tsx  WWRGauge.tsx
src/glassscan/wwr/: CLAUDE.md  __init__.py  test_wwr.py  wwr.py
