[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassscan"
version = "0.1.0"
description = "Estimate window-to-wall ratios of Swiss buildings from Street View imagery"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
    "opencv-python>=4.8",
    "requests>=2.31",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "geopandas>=0.14",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "folium>=0.15",
    "python-dotenv>=1.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ipykernel>=6.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
